Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-08  Mark McLoughlin  <mark@skynet.ie>

	Create a XSettingsManager for every available
	screen and apply settings changes to each.

	* gnome-settings-daemon.c:
	(manager_event_filter): make this a per-window filter
	and ask the appropriate xsettings manager to filter
	the event.
	(finalize): dispose of every manager.
	(gnome_settings_daemon_new): create a settings manager
	for each screen.

	* gnome-settings-xsettings.c:
	(translate_bool_int), (translate_int_int),
	(translate_string_string), (process_value),
	(xsettings_callback), (xft_callback),
	(gnome_xft_settings_set_xsettings),
	(gnome_settings_xsettings_load): apply settings to
	every available settings manager.

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-10-31  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c
	(gnome_settings_accessibility_keyboard_init) : register the gconf
	  handler early.
	(gnome_settings_accessibility_keyboard_load) : not here where it is
	  too late.

2002-10-26  Havoc Pennington  <hp@pobox.com>

	* gnome-settings-wm.c, gnome-settings-wm.h: blow this away

	* gnome-settings-daemon.c: don't init WM stuff

Sun Oct 27 09:00:46 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-settings-xsettings.c: add Gtk/CanChangeAccels to xsettings

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-02-07  Anders Carlsson  <andersca@gnu.org>

        * gdk/x11/xsettings-common.c (xsettings_setting_free): Free
        the setting name.

2002-10-20  Mark McLoughlin  <mark@skynet.ie>

	* factory.c: (main): don't connect to the session manager.

2002-10-18 Erwann Chenede - <erwann.chenede@sun.com>

        * gnome-settings-keybindings.c