@@ -1,3 +1,9 @@
+2003-01-19  Alex Duggan  <aldug@astrolinux.com>
+
+	* gnome-settings-mouse.c (filter), (set_locate_pointer):
+	make the right control key also locate the mouse pointer.
+	Fixes #87426
+
 Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>
 
 	* Release 2.1.7
